--- a/src/app/shared/layout/exibir-bilhete/desafio/exibir-bilhete-desafio.component.css
+++ b/src/app/shared/layout/exibir-bilhete/desafio/exibir-bilhete-desafio.component.css
@@ -1,11 +1,8 @@
 #cupom {
-    /* width: 19.27em; */
-    background: #f3f5d3;
-    color: #1e282c;
     /* margin: 2em auto; */
     font-size: 12px;
     border-radius: 10px;
-    padding: 20px;
+    padding: 10px;
 }
 
 #cupom img{
@@ -31,6 +28,11 @@
     margin: 0;
 }
 
+.acumuladao-nome{
+    font-weight: bolder;
+    border-radius: 5px;
+}
+
 hr {
     margin-top: 5px;
     margin-bottom: 5px;
@@ -49,11 +51,25 @@ hr {
     font-size: 12px;
 }
 
-.item .campeonato{
+.item {
+    border-radius: 10px;
+    padding: 10px;
+    width: 85%;
+}
+
+#jogo-table {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--game);
+    border-bottom: 2px dotted var(--bottom-bar);
+}
+
+.jogo-horario {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
-    margin: 1px;
-    font-weight: bold;
-    font-size: 12px;
+    width: 15%;
 }
 
 .item .horario{
@@ -68,13 +84,22 @@ hr {
     font-size: 12px;
 }
 
-.item .nome{
+.nome{
     margin: 1px;
+    font-weight: bold;
 }
 
 .item .cotacao{
     margin: 1px;
     font-size: 12px;
+    font-weight: bold;
+}
+
+.valores {
+    border-radius: 10px;
+    padding: 10px;
+    background: var(--game);
+    border-bottom: 2px dotted var(--bottom-bar);
 }
 
 .valores .total-desafios, .valores .aposta, .valores .ganho, .valores .cambista-paga{
@@ -85,10 +110,15 @@ hr {
 }
 
 .rodape{
+    padding: 10px;
     margin: 5px 1px 1px 1px;
     font-weight: normal;
     font-size: 12px;
     text-align: center;
+}
+
+#resultado-final {
+    margin: 5px 0 0;
 }
 
 #resultado-final .ganhou{
