--- a/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
+++ b/src/app/shared/layout/modals/aposta-encerramento-modal/aposta-encerramento-modal.component.css
@@ -22,6 +22,26 @@
     color: var(--foreground-header) !important;
 }
 
+.secondary-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    height: 40px;
+    text-decoration: none;
+    border: 1px solid var(--highlight);
+    font-size: 12px;
+    border-radius: 5px;
+    color: var(--foreground-header);
+    white-space: nowrap;
+}
+
+.secondary-btn:hover {
+    background-color: var(--highlight);
+    color: var(--header);
+    transition: 300ms;
+}
+
 #cupom{
     padding: 0 1em;
     background: #363636;
@@ -33,8 +53,6 @@
     color: var(--foreground);
     font-size: 12px;
     margin-bottom: 13px;
-    max-height: 91px;
-    column-count: 3;
 }
 .cupom-ativo{
     background: var(--background);
@@ -83,7 +101,10 @@ hr {
 }
 .item .campeonato{
     margin: 1px;
-    font-size: 12px;
+    font-size: 14px;
+}
+.footer-container {
+    display: none;
 }
 .item .horario{
     margin: 1px;
@@ -106,12 +127,6 @@ hr {
     margin-left: 3px;
 }
 .codigo-aposta, .aposta-horario {
-    display: none;
-}
-.modal-title-mobile {
-    font-weight: 600;
-    margin-bottom: 4px;
-    font-size: 16px;
     display: none;
 }
 .valores span {
@@ -189,15 +204,15 @@ tbody tr:last-child td:first-child {
 
 table th:first-child,
 table tr td:first-child {
-    max-width: 45px;
+    /* max-width: 45px; */
 }
 table tr td:nth-child(2) {
     word-wrap: break-word;
-    max-width: 50px;
+    /* max-width: 50px; */
 }
 table th:nth-child(3),
 table tr td:nth-child(3) {
-    max-width: 35px;
+    /* max-width: 35px; */
 }
 .modal-footer {
     justify-content: center;
@@ -222,6 +237,9 @@ table tr td:nth-child(3) {
     display: none;
 }
  @media only screen and (max-width: 532px) {
+    .footer-container {
+        display: block;
+    }
     .cupom-header {
         margin: 0 5px;
         max-height: none;
@@ -248,10 +266,6 @@ table tr td:nth-child(3) {
     }
     .modal-title {
         display: none;
-    }
-    .modal-title-mobile {
-        margin-left: 7px;
-        display: block;
     }
     .action-buttons button, .action-buttons a {
         padding: 12px;
