--- a/src/app/shared/layout/modals/aposta-modal/aposta-modal.component.css
+++ b/src/app/shared/layout/modals/aposta-modal/aposta-modal.component.css
@@ -9,10 +9,16 @@
     color: var(--foreground-header) !important;
 }
 .modal-title-mobile {
-    font-weight: 600;
+    font-weight: 400;
     margin-bottom: 4px;
-    font-size: 16px;
+    font-size: 14px;
     display: none;
+}
+
+.cupom-header {
+    color: var(--foreground);
+    background: var(--game);
+    font-size: 14px;
 }
 
 @media only screen and (max-width: 532px) {
